datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__active_mcp_tool_call_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1216
expression: rendered
---
• Calling search.find_docs({"query":"ratatui styling","limit":3})
