datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1387
expression: rendered
---
• Called search.find_docs({"query":"ratatui styling","limit":3})
  └ Error: network timeout
