datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__mcp_tools_output_lists_tools_for_hyphenated_server_names.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 885
expression: rendered
---
/mcp

🔌  MCP Tools

  • some-server
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: (none)
    • Resource templates: (none)
