datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__ps_output_empty_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 601
expression: rendered
---
/ps

Background terminals

  • No background terminals running.
