datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__ps_output_long_command_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 718
expression: rendered
---
/ps

Background terminals

  • rg "foo" src --glob '**/*. [...]
    ↳ searching...
