datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__single_line_command_compact_when_fits.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1795
expression: rendered
---
• Ran echo ok
  └ (no output)
