datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1130
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.142.5 -> 9.9.9                                                                      │
│ Run powershell -ExecutionPolicy Bypass -c '$env:DATAX_NON_INTERACTIVE=1; irm                               │
│ https://github.com/mbellary/datax/releases/latest/download/install.ps1 | iex' to update.                   │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/openai/codex/releases/latest                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
