datax-rs/tui/src/history_cell/snapshots/datax_tui__history_cell__tests__web_search_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1112
expression: rendered
---
• Searched the web for example search query with several generic
  words to exercise wrapping
